--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ body {
     font-weight: 100;
     text-transform: uppercase;
     color: #003f34;
-    padding: 60px 0;
+    padding: 0px 0;
 }
 
 .file-upload-image {
@@ -181,4 +181,10 @@ body {
 }
 #container{
     text-align: center;
+}
+.youtube-link{
+    vertical-align: top;
+    text-align: left;
+    font-size: 0.8rem;
+    padding: 8px 9px;
 }
