--- a/style.css
+++ b/style.css
@@ -6,10 +6,7 @@ body {
     background-color: #ffffff;
 }
 
-.img { 
-    width: 100%; 
-    height: auto; 
-}
+
 
 .result-message {
     font-size: 20px;
@@ -191,5 +188,9 @@ body {
 }
 #container{
     text-align: center;
+    }
+
+.drawing {
+    padding: 15% 4% 4% 4%;
 }
 
