--- a/style.css
+++ b/style.css
@@ -13,8 +13,10 @@ body {
 }
 .file-upload {
     background-color: #ffe9f4;
-    width: 600px;
+
     margin: 0 auto;
+    max-width: 40%; 
+    height: auto;
 }
 
 .file-upload-btn {
@@ -67,7 +69,7 @@ body {
     border: solid 4px #35465d;
     background-color: #ffffff;
     max-width: 100%; 
-    height: auto;"
+    height: auto;
 }
 
 .image-dropping,
@@ -188,7 +190,4 @@ body {
     text-align: center;
     }
 
-.drawing {
-    padding: 15% 4% 4% 4%;
-}
 
