--- a/style.css
+++ b/style.css
@@ -44,11 +44,17 @@ body {
 .file-upload-btn:active {
     border: 0;
     transition: all 0.2s ease;
+    margin: 0 auto;
+    max-width: 40%; 
+    height: auto;
 }
 
 .file-upload-content {
     display: none;
     text-align: center;
+    margin: 0 auto;
+    max-width: 40%; 
+    height: auto;
 
 }
 
