--- a/style.css
+++ b/style.css
@@ -50,6 +50,9 @@ body {
 .file-upload-content {
     display: none;
     text-align: center;
+    margin: 0 auto;
+    
+    height: auto;
     
 
 }
@@ -70,7 +73,7 @@ body {
     border-radius: 10px;
     border: solid 4px #35465d;
     background-color: #ffffff;
-    max-width: 100%; 
+    
     height: auto;
     margin: 0 auto;
 }
@@ -91,7 +94,7 @@ body {
 }
 
 .image-title-wrap {
-    padding: 0 15px 15px 15px;
+    
     color: #222;
     margin: 0 auto;
     max-width: 100%; 
